--- a/src/main/resources/assets/sass/_map.scss
+++ b/src/main/resources/assets/sass/_map.scss
@@ -48,15 +48,17 @@
     position: absolute;
     width: 400px;
     height: 500px;
-    background-color: rgba(44, 62, 80, .8);
+    background-color: white;
     right: 0;
     top: 70px;
     border-radius: 0;
+    color: #888888;
+    box-shadow: -2px 2px 4px 1px rgba(255,255,255,1);
     #closePopup {
       position: absolute;
       right: 0;
       margin: 0;
-      color: #FFFFFF;
+      color: #000000;
     }
 
     #closePopup:hover {
@@ -479,8 +481,6 @@
   margin-bottom: 30px;
 }
 
-
-
 .tooltip {
   position: relative;
   background: rgba(0, 0, 0, 0.5);
@@ -490,15 +490,18 @@
   opacity: 0.7;
   white-space: nowrap;
 }
+
 .tooltip-measure {
   opacity: 1;
   font-weight: bold;
 }
+
 .tooltip-static {
   background-color: #ffcc33;
   color: black;
   border: 1px solid white;
 }
+
 .tooltip-measure:before,
 .tooltip-static:before {
   border-top: 6px solid rgba(0, 0, 0, 0.5);
@@ -510,6 +513,7 @@
   margin-left: -7px;
   left: 50%;
 }
+
 .tooltip-static:before {
   border-top-color: #ffcc33;
 }
