--- a/src/main/resources/assets/sass/_settings.scss
+++ b/src/main/resources/assets/sass/_settings.scss
@@ -176,7 +176,7 @@ body {
     .panel-title {
       flex: 1;
     }
-    i{
+    i {
       margin-left: 5px;
     }
   }
@@ -247,4 +247,69 @@ ul {
   padding: 100px 0;
   justify-content: center;
   width: 100%;
+}
+
+.btn-radio {
+  position: relative;
+  input[type=radio] {
+    position: absolute;
+    visibility: hidden;
+  }
+  input[type=radio]:checked ~ .check {
+    border: 5px solid $secondary-color;
+  }
+  input[type=radio]:checked ~ .check::before {
+    background: $secondary-color;
+  }
+  input[type=radio]:checked ~ label {
+    color: $secondary-color;
+  }
+  label {
+    display: block;
+    position: relative;
+    font-weight: 300;
+    font-size: 1.35em;
+    padding: 15px 15px 15px 80px;
+    margin: 2px auto;
+    height: 30px;
+    z-index: 9;
+    cursor: pointer;
+    -webkit-transition: all 0.25s linear;
+  }
+
+  .check {
+    display: block;
+    position: absolute;
+    border: 5px solid #AAAAAA;
+    border-radius: 100%;
+    height: 25px;
+    width: 25px;
+    top: 15px;
+    left: 10px;
+    z-index: 5;
+    transition: border .25s linear;
+    -webkit-transition: border .25s linear;
+  }
+  .check::before {
+    display: block;
+    position: absolute;
+    content: '';
+    border-radius: 100%;
+    height: 15px;
+    width: 15px;
+    top: 0px;
+    left: 0px;
+    margin: auto;
+    transition: background 0.25s linear;
+    -webkit-transition: background 0.25s linear;
+  }
+}
+
+.btn-radio:hover {
+  label {
+    color: $secondary-color;
+  }
+  .check {
+    border: 5px solid $secondary-color;
+  }
 }
