--- a/src/main/resources/templates/admin/fragments/users.html
+++ b/src/main/resources/templates/admin/fragments/users.html
@@ -50,8 +50,19 @@
                                                 v-text="form.errors.get('password')"></strong> </span>
                                     </div>
                                 </div>
+                                <div class="form-group"
+                                     v-bind:class="{'has-error': form.errors.get('matchingPassword')}">
+                                    <label for="matchingPassword" class="control-label">Confirmer mot de passe</label>
+                                    <div>
+                                        <input id="matchingPassword" v-model="form.model.matchingPassword"
+                                               type="password"
+                                               class="form-control"/>
+                                        <span class="help-block"><strong
+                                                v-text="form.errors.get('matchingPassword')"></strong> </span>
+                                    </div>
+                                </div>
                                 <div class="form-group">
-                                    <label class="control-label">roles</label>
+                                    <label class="control-label">Profiles</label>
                                     <div>
                                         <ul>
                                             <li v-for="role in roles">
@@ -79,10 +90,10 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <td>nom</td>
-                    <td>email</td>
-                    <td>roles</td>
-                    <td>actions</td>
+                    <td>Nom</td>
+                    <td>Email</td>
+                    <td>Profiles</td>
+                    <td>Actions</td>
                 </tr>
                 </thead>
                 <tbody>
@@ -142,7 +153,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label">roles</label>
+                                    <label class="control-label">Profiles</label>
                                     <div>
                                         <ul>
                                             <li v-for="role in roles" class="user_role">
