--- a/src/main/resources/templates/claims/edit.html
+++ b/src/main/resources/templates/claims/edit.html
@@ -11,11 +11,73 @@
             <div class="panel-body">
                 <form class="post-form" v-on:submit.prevent="saveClaim" v-on:keydown="
                         form.errors.clear($event.target.name)" enctype="multipart/form-data">
-                    <div class="form-group" v-bind:class="{'has-error': form.errors.get('title')}">
+                    <div class="form-group" v-bind:class="{'has-error': form.errors.get('titre')}">
                         <label for="title" class="control-label">Titre</label>
                         <div>
-                            <input id="title" v-model="form.model.title" type="text" class="form-control" />
-                            <span class="help-block"><strong v-text="form.errors.get('title')"></strong> </span>
+                            <input id="title" v-model="form.model.titre" type="text" class="form-control" />
+                            <span class="help-block"><strong v-text="form.errors.get('titre')"></strong> </span>
+                        </div>
+                    </div>
+                    <div class="form-group" v-bind:class="{'has-error': form.errors.get('type')}">
+                        <label for="title" class="control-label">Type</label>
+                        <div>
+                            <select id="title" v-model="form.model.type" type="text" class="form-control">
+                                <option>Immeuble</option>
+                                <option>Villa</option>
+                                <option>Etage de villa</option>
+                                <option>Garage</option>
+                                <option>Cloture</option>
+                                <option>Autres...</option>
+                            </select>
+                            <span class="help-block"><strong v-text="form.errors.get('type')"></strong> </span>
+                        </div>
+                    </div>
+                    <div class="form-group" v-bind:class="{'has-error': form.errors.get('planification')}">
+                        <label class="control-label">Planification</label>
+                        <div>
+                            <div class="btn-radio">
+                                <input type="radio" value="true" id="f-option"
+                                       v-model="form.model.planification"/>
+                                <label for="f-option">Oui</label>
+                                <div class="check"></div>
+                            </div>
+                            <div class="btn-radio">
+                                <input type="radio" value="false" id="g-option"
+                                       v-model="form.model.planification"/>
+                                <label for="g-option">Non</label>
+                                <div class="check"></div>
+                            </div>
+                            <span class="help-block"><strong v-text="form.errors.get('planification')"></strong> </span>
+                        </div>
+                    </div>
+                    <div class="form-group" v-bind:class="{'has-error': form.errors.get('etat_avancement')}">
+                        <label for="etat_avancement" class="control-label">Etat d'avancement de la
+                            construction</label>
+                        <div>
+                            <div class="input-group">
+                                <input v-model="form.model.etat_avancement" id="etat_avancement"
+                                       class="form-control"
+                                       type="text"/>
+                                <span class="input-group-addon">%</span>
+                            </div>
+                            <span class="help-block"><strong
+                                    v-text="form.errors.get('etat_avancement')"></strong> </span>
+                        </div>
+                    </div>
+                    <div class="form-group" v-bind:class="{'has-error': form.errors.get('epannelage')}">
+                        <label for="epannelage" class="control-label">Epannelage</label>
+                        <div>
+                            <select id="epannelage" v-model="form.model.epannelage" type="text"
+                                    class="form-control">
+                                <option>Rez de chaussée</option>
+                                <option>R+1</option>
+                                <option>R+2</option>
+                                <option>R+3</option>
+                                <option>R+4</option>
+                                <option>R+5</option>
+                                <option>Autres...</option>
+                            </select>
+                            <span class="help-block"><strong v-text="form.errors.get('type')"></strong> </span>
                         </div>
                     </div>
                     <div class="form-group" v-bind:class="{'has-error': form.errors.get('description')}">
@@ -23,7 +85,7 @@
                         <div>
                                     <textarea v-model="form.model.description" id="description"
                                               class="form-control"></textarea>
-                            <span class="help-block"><strong v-text="form.errors.get('title')"></strong> </span>
+                            <span class="help-block"><strong v-text="form.errors.get('description')"></strong> </span>
                         </div>
                     </div>
                     <div class="form-group">
