--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
             <img th:src="@{/images/slide.jpg}" class="ls-bg" alt="home-bg-4-1"/>
             <p class="ls-l">
                 <span class="ls-app-name">URBUPDATE</span><br/>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br/>
+                Mettez à jour votre territoire.<br/>
             </p>
             <a sec:authorize="isAnonymous()" th:href="@{/login}" target="_self" class="ls-l btn btn-success">
                 <p class="ls1-p">
@@ -22,46 +22,29 @@
     </div>
     <div class="container-fluid container-index">
         <div class="app-disc-group">
-            <div data-wow-duration="2s" class="col-md-3 app-disc wow bounceInLeft">
+            <div data-wow-duration="2s" class="col-md-4 app-disc wow bounceInUp">
                 <div class="img-circle">
-                    <i class="fa fa-refresh"></i>
+                    <i class="fa fa-database"></i>
                 </div>
-                <h4 class="utility-center-text">MISE A JOUR DES CARTES</h4>
                 <p class="utility-center-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus consequatur cum dolore et
-                    laborum
-                    maxime nobis odit quidem tenetur veritatis.
+                    Un entrepôt de données pour le stockage.
                 </p>
             </div>
-            <div data-wow-duration="2s" class="col-md-3 app-disc wow bounceInUp">
+            <div data-wow-duration="2s" class="col-md-4 app-disc wow bounceInUp">
                 <div class="img-circle">
-                    <i class="fa fa-map-marker"></i>
+                    <i class="fa fa-dashboard"></i>
                 </div>
-                <h4 class="utility-center-text">ETALLEMENT URBAN</h4>
                 <p class="utility-center-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque debitis dolorum esse illum impedit
-                    ipsum maiores maxime similique tempore vero.
+                    Une plateforme pour la préparation et la publication des données.
                 </p>
             </div>
-            <div data-wow-duration="2s" class="col-md-3 app-disc wow bounceInUp">
+            <div data-wow-duration="2s" class="col-md-4 app-disc wow bounceInRight">
                 <div class="img-circle">
-                    <i class="fa fa-users"></i>
+                    <i class="fa fa-map"></i>
                 </div>
-                <h4 class="utility-center-text">GESTION DES UTILISATEURS</h4>
                 <p class="utility-center-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias dolor eius laboriosam magni modi,
-                    provident quia reprehenderit repudiandae sint voluptates.
-                </p>
-            </div>
-            <div data-wow-duration="2s" class="col-md-3 app-disc wow bounceInRight">
-                <div class="img-circle">
-                    <i class="fa fa-file"></i>
-                </div>
-                <h4 class="utility-center-text">GESTION DES RECLAMATION</h4>
-                <p class="utility-center-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque dolore dolorem eaque eveniet
-                    explicabo
-                    nulla qui quisquam sequi suscipit temporibus!
+                    Un géoservices pour la visualisation, le traitement et la mise à jour
+                    des données.
                 </p>
             </div>
         </div>
@@ -69,13 +52,10 @@
             <div class="app-disc">
                 <h3 class="utility-center-text">URBUPDATE</h3>
                 <p class="utility-center-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat hic ipsa laudantium minima
-                    perferendis
-                    quia quisquam repellendus sapiente soluta vero! Animi aspernatur, at aut beatae consequuntur
-                    doloremque
-                    ea eligendi eos, error facilis inventore laboriosam libero nihil odit optio possimus quae quaerat
-                    quos
-                    suscipit veniam? Consequatur delectus ex magni quisquam vitae! </p>
+                    Une plate forme au service des collectivités locales et du citoyen disposant de données urbaine
+                    fiables,
+                    indispensable au suivie de l’étalement urbain et à la mise en œuvre des nouvelles politiques de
+                    planification et d’aménagement du territoire. </p>
             </div>
         </div>
         <div class="">
@@ -85,17 +65,20 @@
                 </div>
                 <div data-wow-duration="5s" class="app-description wow fadeInRight">
                     <h1><span>A propos de </span>URBUPDATE</h1>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium consectetur culpa delectus
-                    dignissimos distinctio minima nemo reprehenderit sint suscipit. Beatae commodi distinctio dolor
-                    dolorem
-                    eius esse itaque minima placeat ratione? Accusamus at atque dolorum iusto nulla officia placeat,
-                    sed?
-                    Aut beatae ea eum fuga fugiat illum laboriosam neque, odit quibusdam quo repudiandae sequi vitae. At
-                    commodi deleniti deserunt dicta doloremque eius est eum exercitationem explicabo facere facilis hic
-                    ipsum labore nisi, odio officia, omnis quasi quisquam, reprehenderit rerum sed similique ut
-                    voluptatibus. Aperiam atque inventore iusto nihil, non nostrum nulla porro quisquam rerum vitae?
-                    Culpa
-                    ipsum nam officiis vel.
+                    <p>
+                        C’est une application SIG web favorisant l’accès aux données pour le citoyen dans le but de
+                        coproduire une base de données remise à jour en permanence qui suit le rythme de l’étalement
+                        urbain
+                        dont l’objectif est de contrecarré un tel processus long, complexe et évolutif qui se produit
+                        dans
+                        le cadre de plusieurs systèmes en interaction : social, spatial, économique et politique.
+                    </p>
+                    <p>
+                        Elle permet de visualiser les données géographiques numériques (représentations des bâtiments,
+                        hydrographie, altitude, réseau viaire, limites administratives, noms de lieux, etc.) mais
+                        également
+                        de nombreuses données publiques (occupation du sol, taches urbaines de différentes dates…).
+                    </p>
                 </div>
             </div>
         </div>
